# goliath

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  animate.gp.tmpl  animate.sh  plot.plt
include/: glth_candidate.hpp  glth_cb.h  glth_color.hpp  glth_const.hpp  glth_discrim.hpp  glth_env.hpp  glth_fir.h  glth_geom.hpp  glth_io.hpp  glth_opts.h  glth_px1500.hpp  glth_result.h  glth_sample.h  glth_segment.hpp  glth_signal.hpp  glth_tfr_data.hpp  glth_tfr_map.hpp  glth_types.hpp  glth_usage.h  glth_util.hpp  glth_xfrmr.hpp  glth_xwvd.hpp
src/: glth.cpp  glth_candidate.cpp  glth_cb.c  glth_color.cpp  glth_discrim.cpp  glth_env.cpp  glth_fir.c  glth_geom.cpp  glth_io.cpp  glth_opts.c  glth_segment.cpp  glth_signal.cpp  glth_test.cpp  glth_tfr_data.cpp  glth_tfr_map.cpp  glth_usage.c  glth_util.cpp  glth_xfrmr.cpp  goliath.c
